--- a/index.html
+++ b/index.html
@@ -75,14 +75,16 @@
         }
 
         #picture {
+            display: block;
             display: none;
             background-color: white;
-            width: 30vw;
-            height: 30vw;
+            width: 15vw;
+            height: 15vw;
             position: absolute;
-            margin-left: 37.5vw;
-            z-index: 0;
-            background: url(gifs/oog.gif);
+            margin-left: 47.5vw;
+            margin-top: -20vh;
+            z-index: 3;
+            background: url(images/profielpic.png);
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -103,18 +105,20 @@
             z-index: 9;
             font-size: 1vw;
             color: white;
-            mix-blend-mode: difference;
+            /* mix-blend-mode: exclusion; */
+            /* mix-blend-mode: normal; */
             pointer-events: none;
+            background-color: #00000000;
             /* transition: 0.2s ease-in-out; */
         }
 
-        nav a:hover {
+        /* nav a:hover {
             background-color: orangered;
-            /* mix-blend-mode: normal; */
-        }
+            mix-blend-mode: normal;
+        } */
 
-        nav li {
-            /* mix-blend-mode: normal; */
+        nav a {
+            /* mix-blend-mode: exclusion; */
             pointer-events: auto;
         }
 
@@ -126,6 +130,20 @@
             mix-blend-mode: normal;
 
         } */
+
+        #navlione,
+        #navlitwo,
+        #navlithree {
+
+            mix-blend-mode: exclusion;
+        }
+
+        #navlione:hover,
+        #navlitwo:hover,
+        #navlithree:hover{
+            background-color: orangered;
+            /* mix-blend-mode: normal; */
+        }
 
 
         /* nav:hover {
@@ -228,7 +246,7 @@
             background: transparent;
             background: url(gifs/bosinhuis_2.gif);
             background-color: aliceblue;
-            -webkit-text-fill-color: white;
+            -webkit-text-fill-color: #0A214C;
             background-position: 0vw -25vw;
             background-repeat: no-repeat;
             background-size: cover;
@@ -248,7 +266,7 @@
             background: transparent;
             background: url(images/scrnbraive.jpg);
             background-color: aliceblue;
-            -webkit-text-fill-color: white;
+            -webkit-text-fill-color: #0A214C;
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -268,7 +286,7 @@
             background: transparent;
             background: url(images/scrnper.jpg);
             background-color: aliceblue;
-            -webkit-text-fill-color: white;
+            -webkit-text-fill-color: #0A214C;
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -288,7 +306,7 @@
             background: transparent;
             background: url(images/scrnstory.png);
             background-color: aliceblue;
-            -webkit-text-fill-color: white;
+            -webkit-text-fill-color: #0A214C;
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -308,7 +326,7 @@
             background: transparent;
             background: url(gifs/hero.gif);
             background-color: aliceblue;
-            -webkit-text-fill-color: white;
+            -webkit-text-fill-color: #0A214C;
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -328,7 +346,7 @@
             background: transparent;
             background: url(gifs/remcosspel_2_2.gif);
             background-color: aliceblue;
-            -webkit-text-fill-color: white;
+            -webkit-text-fill-color: #0A214C;
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -568,9 +586,11 @@
             transition: height 0.3s ease-out, width 0.3s ease-out, border-radius 0.3s ease-out;
             /* transition: height 0.5s ease-out; */
             border-radius: 100%;
+            /* background: url(images/profielpic.png);
+                background-size: cover; */
         }
 
-        #mouseview {
+        /* #mouseview {
             position: fixed;
             background-color: rgba(32, 234, 153, 0.126);
             width: 100vw;
@@ -579,7 +599,7 @@
             left: 0px;
             z-index: 10;
             mix-blend-mode: difference;
-        }
+        } */
 
         #lione {
             background-color: whitesmoke;
@@ -720,14 +740,15 @@
             background-color: brown;
             z-index: 7;
         }
-        #form{
+
+        #form {
             background-color: darkolivegreen;
         }
 
         #conul {
             position: absolute;
             left: 50vw;
-            color: #0A0A0A;
+            color: #0A214C;
         }
 
         #conul {
@@ -735,13 +756,13 @@
             width: auto;
         }
 
-        #conul li{
+        #conul li {
             padding: 0.2vh 0.5vw;
 
         }
 
         #conul li:hover {
-            background-color: #0A0A0A;
+            background-color: #0A214C;
             color: wheat;
             width: 50vw;
         }
@@ -751,13 +772,13 @@
 <body onmousemove="showCoords(event)">
     <nav>
         <a href="#about">
-            <li>over mij</li>
+            <li id="navlione">over mij</li>
         </a>
         <a href="#content">
-            <li>mijn werk</li>
+            <li id="navlitwo">mijn werk</li>
         </a>
         <a href="#contact">
-            <li>contact</li>
+            <li id="navlithree">contact</li>
         </a>
     </nav>
 
@@ -1010,7 +1031,7 @@
         document.getElementById("mouse").style.borderRadius = nbdr;
 
         selector(pic, "6vw", "6vw", "100%", "normal", "0.3", "orangered");
-        selector(p, "10vw", "10vw", "100%", ombm, oopa, obkc);
+        // selector(p, "10vw", "10vw", "100%", ombm, oopa, obkc);
         selector(h1, "4vw", "10vw", obdr, ombm, oopa, obkc);
         selector(button, "0.5vw", "0.5vw", "100%", ombm, oopa, obkc);
 
